# telecentros

./: AUTHORS  DOCUMENTACTION.txt  Makefile.am  TODO.txt  configure.ac  modifications.txt  projeto.xmind
data/: Makefile.am  telecentros.desktop.in.in
data/icons/: Makefile.am
data/ui/: Makefile.am  login.ui  main.ui
debian/: changelog  control  copyright  files  menu  rules  telecentros.substvars
documentation/: .~lock.documentation.odt#  documentation.gaphor  documentation.odt
po/: POTFILES.in  pt_BR.po  telecentros.pot
src/: Makefile.am  TODO.txt  telecentros.py
src/TeleCentros/: ConfigClient.py  Makefile.am  __init__.py  config.py  config.py.in  get_macaddr.py  globals.py  httpproxy.py  jsonrequester.py  logout_actions.py  main.py  utils.py
src/TeleCentros/ui/: Makefile.am  __init__.py  background.py  dialogs.py  icons.py  login.py  utils.py
src/fakeserver/: settings.py  urls.py  views.py
src/pygdm/: Makefile.am
src/pygdm/.deps/: gdm_la-gdm-logout-action.Plo  gdm_la-main.Plo
